[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/puzzle.gd" type="Script" id=1]
[ext_resource path="res://scenes/lungset512.tres" type="TileSet" id=2]
[ext_resource path="res://scenes/maze.gd" type="Script" id=3]
[ext_resource path="res://art/fraim.png" type="Texture" id=4]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=5]
[ext_resource path="res://art/moveD.png" type="Texture" id=6]
[ext_resource path="res://art/infectionD.png" type="Texture" id=7]
[ext_resource path="res://art/attackD.png" type="Texture" id=8]
[ext_resource path="res://art/defendD.png" type="Texture" id=9]
[ext_resource path="res://addons/radial_progress/RadialProgressBar.gd" type="Script" id=10]
[ext_resource path="res://scripts/UI.gd" type="Script" id=11]
[ext_resource path="res://fonts/crolla.tres" type="DynamicFont" id=12]
[ext_resource path="res://art/arrow_0.png" type="Texture" id=13]
[ext_resource path="res://art/arrow_2.png" type="Texture" id=14]
[ext_resource path="res://art/arrow_1.png" type="Texture" id=15]
[ext_resource path="res://art/arrow_3.png" type="Texture" id=16]

[node name="game" type="Node2D"]

[node name="maze" type="Node2D" parent="."]
position = Vector2( 250, 250 )
script = ExtResource( 3 )

[node name="lungmap" type="TileMap" parent="maze"]
position = Vector2( -16.7019, -35.0739 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 128, 128 )
format = 1

[node name="player" parent="." instance=ExtResource( 5 )]
position = Vector2( 292.859, 275.878 )

[node name="Camera2D" type="Camera2D" parent="player"]
position = Vector2( 1.64563, 118.114 )
current = true
zoom = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_lock_": true
}

[node name="wallRay" type="RayCast2D" parent="player"]
enabled = true
cast_to = Vector2( -50, 0 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 11 )

[node name="windowUI" type="Node2D" parent="UI"]
scale = Vector2( 1.01, 1.01 )
__meta__ = {
"_edit_lock_": true
}

[node name="background" type="TextureRect" parent="UI/windowUI"]
margin_left = -3.70129
margin_right = 572.299
margin_bottom = 1024.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="move_group" type="Node2D" parent="UI/windowUI"]

[node name="moveProgress" type="Control" parent="UI/windowUI/move_group"]
margin_left = 64.0
margin_top = 64.0
margin_right = 104.0
margin_bottom = 104.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
max_value = 12
radius = 60
progress = 1
thickness = 10
bg_color = Color( 0.0352941, 0.156863, 0.964706, 0 )
bar_color = Color( 0, 0.580392, 1, 1 )

[node name="moveNum" type="Label" parent="UI/windowUI/move_group/moveProgress"]
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 12 )
text = "1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="uparrow" type="TextureButton" parent="UI/windowUI/move_group"]
margin_left = 216.654
margin_top = 14.8828
margin_right = 344.654
margin_bottom = 142.883
texture_normal = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rightarrow" type="TextureButton" parent="UI/windowUI/move_group"]
margin_left = 429.974
margin_top = 223.242
margin_right = 557.974
margin_bottom = 351.242
texture_normal = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leftarrow" type="TextureButton" parent="UI/windowUI/move_group"]
margin_left = 8.29416
margin_top = 224.896
margin_right = 136.294
margin_bottom = 352.896
texture_normal = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="downarrow" type="TextureButton" parent="UI/windowUI/move_group"]
margin_left = 216.654
margin_top = 429.948
margin_right = 344.654
margin_bottom = 557.948
texture_normal = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move" type="TextureRect" parent="UI/windowUI/move_group"]
modulate = Color( 1, 1, 1, 0.392157 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="infectProgress" type="Control" parent="UI/windowUI"]
margin_left = 504.0
margin_top = 64.0
margin_right = 544.0
margin_bottom = 104.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
max_value = 12
radius = 64
progress = 1
bg_color = Color( 0.054902, 0.00392157, 0.00392157, 0 )
bar_color = Color( 0.2, 0.901961, 0.2, 0.678431 )

[node name="infect" type="TextureRect" parent="UI/windowUI/infectProgress"]
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attackProgres" type="Control" parent="UI/windowUI"]
margin_left = 64.0
margin_top = 502.0
margin_right = 104.0
margin_bottom = 542.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
max_value = 12
radius = 64
progress = 1
bg_color = Color( 0.501961, 0.501961, 0.501961, 0 )
bar_color = Color( 0.945098, 0.0509804, 0.0509804, 0.584314 )

[node name="attack" type="TextureRect" parent="UI/windowUI/attackProgres"]
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = -64.0
margin_top = -63.825
margin_right = 64.0
margin_bottom = 64.175
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="defendProgress" type="Control" parent="UI/windowUI"]
margin_left = 501.0
margin_top = 503.0
margin_right = 541.0
margin_bottom = 543.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
max_value = 12
radius = 64
progress = 1
bg_color = Color( 0.501961, 0.501961, 0.501961, 0 )
bar_color = Color( 0.847059, 0.901961, 0.2, 0.752941 )

[node name="defend" type="TextureRect" parent="UI/windowUI/defendProgress"]
modulate = Color( 1, 1, 1, 0.160784 )
margin_left = -63.8452
margin_top = -64.3933
margin_right = 64.1548
margin_bottom = 63.6067
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="turns" type="Label" parent="UI/windowUI"]
margin_left = 208.0
margin_top = 522.0
margin_right = 361.0
margin_bottom = 584.0
custom_fonts/font = ExtResource( 12 )
text = "text"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="destroy_timer" type="Timer" parent="UI"]
wait_time = 0.2
one_shot = true

[node name="refill_timer" type="Timer" parent="UI"]
wait_time = 0.2
one_shot = true

[node name="puzzle" type="Node2D" parent="UI"]
script = ExtResource( 1 )
width = 8
height = 5
x_start = 64
y_start = 900
offset = 64
y_offset = 2
[connection signal="move_remove" from="player" to="UI" method="_on_player_move_remove"]
[connection signal="pressed" from="UI/windowUI/move_group/uparrow" to="player" method="_on_uparrow_pressed"]
[connection signal="pressed" from="UI/windowUI/move_group/rightarrow" to="player" method="_on_rightarrow_pressed"]
[connection signal="pressed" from="UI/windowUI/move_group/leftarrow" to="player" method="_on_leftarrow_pressed"]
[connection signal="pressed" from="UI/windowUI/move_group/downarrow" to="player" method="_on_downarrow_pressed"]
[connection signal="timeout" from="UI/destroy_timer" to="UI/puzzle" method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="UI/refill_timer" to="UI/puzzle" method="_on_refill_timer_timeout"]
[connection signal="move_update" from="UI/puzzle" to="UI" method="_on_puzzle_move_update"]
